--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="../css/Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ravens Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    
+
+  </head>
+  <body class="background-image">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
 
@@ -19,7 +23,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link" href="About us.html">About Us</a>
+              <a class="nav-link" href="./aboutUs.html">About Us</a>
             </li>
 
           </ul>
@@ -28,10 +32,7 @@
       </div>
     </nav>
 
-  </head>
-  <body>
-    <div class="background-image">
-
+    <div >
       <div style="display: inline-block; margin: 100px 50px 0px 180px;">
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
