you changed names of the html files but forgot to change them inside

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,7 +23,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link" href="./aboutUs.html">About Us</a>
+              <a class="nav-link" href="aboutUs.html">About Us</a>
             </li>
 
           </ul>
@@ -37,11 +37,11 @@
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
-              <a href="god of war.html"> <img src="https://media.gamestop.com/i/gamestop/god-of-warHeroTM/god-of-war.jpg?$POI$&w=768&aspect=.66:1" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
+              <a href="godOfwar.html"> <img src="https://media.gamestop.com/i/gamestop/god-of-warHeroTM/god-of-war.jpg?$POI$&w=768&aspect=.66:1" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
             </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><a href="god of war.html">God of War 2018</a></h5>
+              <h5 class="card-title"><a href="godOfwar.html">God of War 2018</a></h5>
                 <br/>
               <p class="card-text">god of war is a game that tells ....</p>
             </div>
@@ -54,11 +54,11 @@
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
-              <a href="Uncharted 4.html"> <img src="https://i.gadgets360cdn.com/products/large/uncharted-4-a-thiefs-end-533x800-1641555756.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
+              <a href="Uncharted4.html"> <img src="https://i.gadgets360cdn.com/products/large/uncharted-4-a-thiefs-end-533x800-1641555756.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
             </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><a href="Uncharted 4.html">Uncharted 4: A theifs end</a></h5>
+              <h5 class="card-title"><a href="Uncharted4.html">Uncharted 4: A theifs end</a></h5>
                 <br/>
               <p class="card-text">The last game for nethan drake collection </p>
             </div>
