change home page to index and bring it to root folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
 
-        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="home.html"><span class="mb-0 h2">Ravens Blog</span></a>
+        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="index.html"><span class="mb-0 h2">Ravens Blog</span></a>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link" href="aboutUs.html">About Us</a>
+              <a class="nav-link" href="./HTML/aboutUs.html">About Us</a>
             </li>
 
           </ul>
@@ -41,7 +41,7 @@
             </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><a href="godOfwar.html">God of War 2018</a></h5>
+              <h5 class="card-title"><a href="./HTML/godOfWar.html">God of War 2018</a></h5>
                 <br/>
               <p class="card-text">god of war is a game that tells ....</p>
             </div>
@@ -58,7 +58,7 @@
             </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><a href="Uncharted4.html">Uncharted 4: A theifs end</a></h5>
+              <h5 class="card-title"><a href="./HTML/Uncharted4.html">Uncharted 4: A theifs end</a></h5>
                 <br/>
               <p class="card-text">The last game for nethan drake collection </p>
             </div>
@@ -75,7 +75,7 @@
             </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><a href="Hellblade.html">Hellblade senuas sacrifice</a></h5>
+              <h5 class="card-title"><a href="./HTML/Hellblade.html">Hellblade senuas sacrifice</a></h5>
                 <br/>
               <p class="card-text">million voices in your head and lost in a land you ....</p>
             </div>
