correct the path from the other pages to the index

--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="display:flexbox;">
       <div class="container-fluid">
 
-        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="home.html">
+        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="../index.html">
           <span class="mb-0 h2">Ravens Blog</span>
         </a>
         
