--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
           
-        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="home.html"><span class="mb-0 h2">Ravens Blog</span></a>
+        <a class="navbar-brand font-effect-fire-animation position-absolute top-1 start-50 translate-middle-x" href="../index.html"><span class="mb-0 h2">Ravens Blog</span></a>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
