fix the styling of pages

--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -9,7 +9,7 @@
 
   </head>
 
-  <body class="about_background-image">
+  <body class="background-image">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="display:flexbox;">
       <div class="container-fluid">
