--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </div>
     </nav>
 
-    <div >
-      <div style="display: inline-block; margin: 100px 50px 0px 180px;">
+    <div class="cardContainer" >
+      <div >
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
@@ -50,7 +50,7 @@
        </div>
       </div>
 
-      <div style="display: inline-block; margin: 100px 50px 0px 100px;">
+      <div >
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
@@ -67,7 +67,7 @@
        </div>
       </div>
 
-      <div style="display: inline-block; margin: 70px 50px 0px 180px;">
+      <div >
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
