change colors and pics path

--- a/HTML/Hellblade.html
+++ b/HTML/Hellblade.html
@@ -38,7 +38,7 @@
       <small >By:Amr Naiem -May 10, 2022</small>
       <br>
       <hr>                    
-      <img src="https://64.media.tumblr.com/9b7df8e8210756376729515f18e34ce9/3e95240cc1b5380c-70/s640x960/f4ff4f9293c478845a3343a60967ef4cb02ee917.gif" >
+      <img src="../pics/hellblade.gif" >
       <br><br>
       <p >In <strong>hellblade senua's sacrifice</strong>, the struggle of coming to terms with past trauma and guilt comes out in a number of surprising ways. Developer Ninja Theory channels its talents for narrative and presentation to tell a personal story that has more to say than it initially lets on, and will likely leave you wondering what's real, and what is a part of an elaborate hallucination.</p>
       <p >In a far-off land covered in mist and fog, a traumatized celtic warrior named Senua embarks on a spiritual vision quest to suppress her inner demons, and come to grips with the death of her family. Plagued with severe psychosis, Senua's past trauma manifests itself through duelling inner voices and visual hallucinations that compromise her emotional and mental state. On this journey, she'll face abstract and reality-defying puzzles, and battle a seemingly endless horde of adversaries that aim to put a stop to her quest.</p>
