--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
-              <a href="godOfwar.html"> <img src="https://media.gamestop.com/i/gamestop/god-of-warHeroTM/god-of-war.jpg?$POI$&w=768&aspect=.66:1" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
+              <a href="godOfwar.html"> <img src="./pics/god-of-warCard.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
             </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -54,7 +54,7 @@
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
-              <a href="Uncharted4.html"> <img src="https://i.gadgets360cdn.com/products/large/uncharted-4-a-thiefs-end-533x800-1641555756.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
+              <a href="Uncharted4.html"> <img src="./pics/unchartedCard.webp" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
             </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -71,7 +71,7 @@
         <div class="card text-white bg-dark mb-3" style="width: 500px; height: 226px;">
           <div class="row g-0">
             <div class="col-md-4" style="width: 160px; height: 223px;">
-              <a href="Hellblade.html"> <img src="https://img.akwam.link/uploads/LPcXn.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
+              <a href="Hellblade.html"> <img src="./pics/hellbladeCard.jpg" class="img-fluid rounded-start" alt="God of war image" style="width: 179px; height: 223px;"></a>
             </div>
           <div class="col-md-8">
             <div class="card-body">
