--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-                <a class="nav-link" href="About us.html">About Us</a>
+                <a class="nav-link" href="./aboutUs.html">About Us</a>
             </li>
 
             </ul>
