modified on feedback seasion

--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -9,7 +9,7 @@
 
   </head>
 
-  <body class="background-image">
+  <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" style="display:flexbox;">
       <div class="container-fluid">
@@ -30,25 +30,26 @@
             </li>
 
           </ul>
+          <ul>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/"><img src="../pics/facebook.png" alt="facebook" class="icon"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
 
     <content>
       <div class="about">
-        <h2>Talk About Us</h2>
-        <p>this video is to tell you about our blog and who make it.</p>
+        <h4>Click the video to unleash INFO about us &#9760;&#65039;</h4>
         <video controls >
-          <source src="../video/Frien.mp4" type="video/mp4">
+          <source src="../video/aboutSite.mp4" type="video/mp4">
         </video>
 
-        <h2>Talk About Us</h2>
-        <p>this video is to tell you about our blog and who make it.</p>
-        <audio controls style="display: block;">
-            <source src="../audio/Jessie Villa - wicked game.mp3" type="audio/mp3">
-        </audio>
-        <h2>Talk About Us</h2>
-        <p>this video is to tell you about our blog and who make it.</p>  
+        <br><br>
+        <iframe width="88%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/577499823&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/alexis-samudio-477752323" title="alexssamu" target="_blank" style="color: #cccccc; text-decoration: none;">alexssamu</a> · <a href="https://soundcloud.com/alexis-samudio-477752323/sets/gaming-music-by-ncs" title="Gaming Music by NCS" target="_blank" style="color: #cccccc; text-decoration: none;">Gaming Music by NCS</a></div>
+        <br><br>
         <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Day 2 <a href="https://twitter.com/hashtag/E32021?src=hash&amp;ref_src=twsrc%5Etfw">#E32021</a>: SQUARE ENIX <a href="https://t.co/x8hJnxo4cJ">pic.twitter.com/x8hJnxo4cJ</a></p>&mdash; E3 (@E3) <a href="https://twitter.com/E3/status/1405965193348145153?ref_src=twsrc%5Etfw">June 18, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </content>
