--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -30,14 +30,15 @@
             </ul>
   
         </div>
-      </div>
+       </div>
   </nav>
   <content>
     <div class="about">
       <h1 >God of War</h1>
       <small >By:Amr Naiem -May 10, 2022</small>
       <br>
-      <hr>                    
+      <hr> 
+      <iframe width="915" height="420" src="https://www.youtube.com/embed/gOE2BVRCUkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                   
       <img src="../pics/godOfWar.gif" >
       <br><br>
       <p ><strong>Kratos</strong> and his son <strong>Atreus</strong> sit in a canoe in the middle of a lake, listening intently to a disembodied head recount the tawdry and tragic dramas of the Norse gods. The head dishes with the gusto of a gossip columnist and the smoothness of a public radio host. Kratos and son show the orator respect, only interrupting with the occasional question for clarification. That this serene moment doesn’t ring false, let alone veer into tedium, speaks to the tremendous heavy lifting done by the creators of&nbsp;<em>God of War</em>&nbsp;to shift the tone, the style and the expectations of one of the most beloved but also most violent and debaucherous franchises in modern games.</p>
