--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../css/Style.css">
+    <link rel="stylesheet" href="./css/Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ravens Blog</title>
@@ -27,7 +27,12 @@
             </li>
 
           </ul>
-  
+          <ul class="navbar-nav ml-auto">
+            
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/"><img src="./pics/facebook.png" alt="facebook" style="width: 50px;"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
