Redesigned homepage and fixed the project structure

--- a/HTML/Hellblade.html
+++ b/HTML/Hellblade.html
@@ -38,7 +38,7 @@
       <small >By:Amr Naiem -May 10, 2022</small>
       <br>
       <hr>                    
-      <img src="../pics/hellblade.gif" >
+      <img src="../assets/pics/hellblade.gif" >
       <br><br>
       <iframe width="915" height="420" src="https://www.youtube.com/embed/xb-RH2b8ac4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p >In <strong>hellblade senua's sacrifice</strong>, the struggle of coming to terms with past trauma and guilt comes out in a number of surprising ways. Developer Ninja Theory channels its talents for narrative and presentation to tell a personal story that has more to say than it initially lets on, and will likely leave you wondering what's real, and what is a part of an elaborate hallucination.</p>
