--- a/HTML/Uncharted4.html
+++ b/HTML/Uncharted4.html
@@ -38,7 +38,7 @@
       <small >By:Amr Naiem -May 10, 2022</small>
       <br>
       <hr>                    
-      <img src="../pics/uncharted.gif" >
+      <img src="../assets/pics/uncharted.gif" >
       <br><br>
       <iframe width="915" height="420" src="https://www.youtube.com/embed/zL46dpNEPPA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p >The game begins&nbsp;<em>in medias res</em>&nbsp;with treasure hunter brothers&nbsp;Nathan "Nate" Drake&nbsp;(Nolan North) and&nbsp;Samuel "Sam" Drake&nbsp;(Troy Baker) driving toward an island in a storm while fighting off armed thugs in boats before their boat is scuttled. Years before, when Nate (Britain Dalton) is living in the St. Francis orphanage, he's visited by Sam (Chase Austin), who was kicked out for criminal activities. After helping him sneak out, Sam tells Nate he's leaving for a job that will keep him away for a few years, before cheering him up by telling him that he knows where their late mother's effects were sold.</p>
