--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -33,7 +33,7 @@
           <ul>
             
             <li class="nav-item">
-              <a class="nav-link" href="https://www.facebook.com/"><img src="../pics/facebook.png" alt="facebook" class="icon"></i></a>
+              <a class="nav-link" href="https://www.facebook.com/"><img src="../assets/pics/facebook.png" alt="facebook" class="icon"></i></a>
             </li>
           </ul>
         </div>
@@ -44,7 +44,7 @@
       <div class="about">
         <h4>Click the video to unleash INFO about us &#9760;&#65039;</h4>
         <video controls >
-          <source src="../video/aboutSite.mp4" type="video/mp4">
+          <source src="../assets/video/aboutSite.mp4" type="video/mp4">
         </video>
 
         <br><br>
