--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -39,7 +39,7 @@
       <br>
       <hr> 
       <iframe width="915" height="420" src="https://www.youtube.com/embed/gOE2BVRCUkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                   
-      <img src="../pics/godOfWar.gif" >
+      <img src="../assets/pics/godOfWar.gif" >
       <br><br>
       <p ><strong>Kratos</strong> and his son <strong>Atreus</strong> sit in a canoe in the middle of a lake, listening intently to a disembodied head recount the tawdry and tragic dramas of the Norse gods. The head dishes with the gusto of a gossip columnist and the smoothness of a public radio host. Kratos and son show the orator respect, only interrupting with the occasional question for clarification. That this serene moment doesn’t ring false, let alone veer into tedium, speaks to the tremendous heavy lifting done by the creators of&nbsp;<em>God of War</em>&nbsp;to shift the tone, the style and the expectations of one of the most beloved but also most violent and debaucherous franchises in modern games.</p>
       <p >Last we saw Kratos, he still enjoyed getting hammered on a bottle of red, participating in a well-lit orgy and slaying Greek gods in ways that a teenager might storyboard onto the back of a ruled notebook. He and his franchise thrived on adrenaline, any inner turmoil serving as a springboard for ultraviolence, rather than an emotional well to be drawn from. Times change, and the new&nbsp;<em>God of War</em>, part sequel (the story continues from where it left off) and part reboot (the adventure is slower and the characterization more thoughtful), has more heroic ambitions for the notorious antihero.</p>
