--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What a Parallax !</title>
+    <title>God of war</title>
     <link rel="stylesheet" href="../css/Style.css">
 
 </head>
