--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -21,17 +21,24 @@
 </div>
 <section>
     <picture class="media-block__img lozad lazy-loaded" data-alt="God of War - Logo" data-loaded="true">
-        <source srcset="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$1200px--t$" media="(min-width: 768px)">
-        <source srcset="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$800px--t$" media="(min-width: 320px)">
-        <noscript><img itemprop="contentUrl" src="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$100px--t$" alt="God of War - Logo"/></noscript>
+        <source srcset="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$1200px--t$"
+                media="(min-width: 768px)">
+        <source srcset="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$800px--t$"
+                media="(min-width: 320px)">
+        <noscript><img itemprop="contentUrl"
+                       src="https://gmedia.playstation.com/is/image/SIEPDC/god-of-war-logo-us-18oct17?$100px--t$"
+                       alt="God of War - Logo"/></noscript>
         <img alt="God of War - Logo"></picture>
     <div>
         <p class="Section--paragraph">
-            Many years have passed since the titular God of War, Kratos took his vengeance against the Olympian gods. Having survived his final encounter with his father Zeus,
-            Kratos has since travelled to Midgard in Ancient Norway and now lives with his young son Atreus in the world of the Norse gods,
+            Many years have passed since the titular God of War, Kratos took his vengeance against the Olympian gods.
+            Having survived his final encounter with his father Zeus,
+            Kratos has since travelled to Midgard in Ancient Norway and now lives with his young son Atreus in the world
+            of the Norse gods,
             a savage land inhabited by many ferocious monsters and warriors.
             In order to teach his son, whose mother (and Kratos's second wife) has recently died,
-            how to survive in such a world, Kratos must master the rage that has driven him for many years and embrace his newfound role as a father and a mentor.
+            how to survive in such a world, Kratos must master the rage that has driven him for many years and embrace
+            his newfound role as a father and a mentor.
         </p>
     </div>
 
@@ -45,12 +52,17 @@
 </div>
 <section>
     <h1 class="Section--title">A Spartan Never Lets His Back Hit The Ground.</h1>
-    <p class="Section--paragraph"> Many years have passed since Kratos, a Spartan warrior and former Greek God of War, took his vengeance against the Greek Gods,
-        and he now lives with his young son Atreus in ancient Norway in the realm of Midgard. The game begins after the death of the Jötunn warrior Faye,
-        Kratos' second wife and Atreus' mother, whose last request was for her ashes to be spread at the highest peak of the Nine Realms. Kratos and Atreus prepare a funeral pyre for her,
-        mourn her death and soon go on a hunt as per Kratos' desire. However, much to Kratos' disappointment, Atreus proves his incompetence and lack of focus, making Kratos reconsider taking Atreus in his journey.
+    <p class="Section--paragraph"> Many years have passed since Kratos, a Spartan warrior and former Greek God of War,
+        took his vengeance against the Greek Gods,
+        and he now lives with his young son Atreus in ancient Norway in the realm of Midgard. The game begins after the
+        death of the Jötunn warrior Faye,
+        Kratos' second wife and Atreus' mother, whose last request was for her ashes to be spread at the highest peak of
+        the Nine Realms. Kratos and Atreus prepare a funeral pyre for her,
+        mourn her death and soon go on a hunt as per Kratos' desire. However, much to Kratos' disappointment, Atreus
+        proves his incompetence and lack of focus, making Kratos reconsider taking Atreus in his journey.
         Kratos is soon attacked by a mysterious stranger with godlike powers,
-        and who cannot feel anything physically. After seemingly killing him, Kratos reluctantly takes Atreus with him and begins their journey.
+        and who cannot feel anything physically. After seemingly killing him, Kratos reluctantly takes Atreus with him
+        and begins their journey.
     </p>
 </section>
 <div class="parallax3">
@@ -58,16 +70,22 @@
         Wars Are Won By Those Willing To Sacrifice Everything.
     </div>
     <div class="player">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
     </div>
 </div>
 <div>
     <section>
         <h1 class="Section--title">Keep your expectations low boy, and you'll never be disappointed.</h1>
-        <p class="Section--paragraph"> Atreus: The deuteragonist of the game. The son of Kratos and Faye, Atreus is a young boy who accompanies Kratos on his journey.
+        <p class="Section--paragraph"> Atreus: The deuteragonist of the game. The son of Kratos and Faye, Atreus is a
+            young boy who accompanies Kratos on his journey.
             He is taught how to hunt early in the game and is shown to be impulsive and undisciplined.
-            He has the ability to read runic writings and is more knowledgeable about the world and its inhabitants than Kratos.
-            He is unaware of the god status of Kratos. He is eventually revealed to be also named Loki, the mythological God of Mischief.
+            He has the ability to read runic writings and is more knowledgeable about the world and its inhabitants than
+            Kratos.
+            He is unaware of the god status of Kratos. He is eventually revealed to be also named Loki, the mythological
+            God of Mischief.
         </p>
         </p>
     </section>
@@ -80,11 +98,12 @@
 
     <div class="wrap">
 
-        <button class="buttonl" onclick="location.href='https://www.playstation.com/en-us/games/god-of-war/'">LEARN MORE</button>
+        <button class="buttonl" onclick="location.href='https://www.playstation.com/en-us/games/god-of-war/'">LEARN
+            MORE
+        </button>
     </div>
 
 </div>
-
 
 
 </body>
