--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
     </li>
     <li>
         <a href="./HTML/Hellblade.html" class="GameCard">
-            <img src="assets/pics/FarCry5.png" class="card__image" alt="hellblade"/>
+            <img src="assets/pics/SpiderMan2018.jpg" class="card__image" alt="hellblade"/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
                         <path/>
                     </svg>
-                    <img class="card__thumb" src="assets/pics/nasser.png.png" alt=""/>
+                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
                     <div class="card__header-text">
-                        <h3 class="card__title">Far Cry® 5</h3>
+                        <h3 class="card__title">Spider Man Remastered</h3>
                         <span class="card__status">5days ago</span>
                     </div>
                 </div>
-                <p class="card__description">FIGHT AGAINST A DEADLY CULT ....</p>
+                <p class="card__description">The friendly neighborhood spider-man</p>
             </div>
         </a>
     </li>
