added other games

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 </nav>
 <ul class="cards">
     <li>
-
         <a href="./HTML/godOfWar.html" class="GameCard">
             <img src="assets/pics/god-of-warCard.jpg" class="card__image" alt="God of war image"/>
             <div class="card__overlay">
@@ -59,8 +58,26 @@
         </a>
     </li>
     <li>
-        <a href="./HTML/Uncharted4.html" class="GameCard">
-            <img src="assets/pics/unchartedCard.webp" class="card__image" alt="uncharted"/>
+        <a href="./HTML/Hellblade.html" class="GameCard">
+            <img src="assets/pics/SpiderMan2018.jpg" class="card__image" alt="hellblade"/>
+            <div class="card__overlay">
+                <div class="card__header">
+                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
+                        <path/>
+                    </svg>
+                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
+                    <div class="card__header-text">
+                        <h3 class="card__title">Spider Man Remastered</h3>
+                        <span class="card__status">5 days ago</span>
+                    </div>
+                </div>
+                <p class="card__description">The friendly neighborhood spider-man</p>
+            </div>
+        </a>
+    </li>
+    <li>
+        <a href="" class="GameCard">
+            <img src="assets/pics/ResidentEvil3.webp" class="card__image" alt=""/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
@@ -68,11 +85,29 @@
                     </svg>
                     <img class="card__thumb" src="assets/pics/sorour.png" alt=""/>
                     <div class="card__header-text">
-                        <h3 class="card__title">Uncharted 4: A theifs end</h3>
+                        <h3 class="card__title">Resident Evil 3</h3>
+                        <span class="card__status">1 day ago</span>
+                    </div>
+                </div>
+                <p class="card__description">Earth is ours no more.</p>
+            </div>
+        </a>
+    </li>
+    <li>
+        <a href="./HTML/Uncharted4.html" class="GameCard">
+            <img src="assets/pics/StrongholdWarlords.webp" class="card__image" alt="uncharted"/>
+            <div class="card__overlay">
+                <div class="card__header">
+                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
+                        <path/>
+                    </svg>
+                    <img class="card__thumb" src="assets/pics/serag.png" alt=""/>
+                    <div class="card__header-text">
+                        <h3 class="card__title">Stronghold: Warlods</h3>
                         <span class="card__status">2 hours ago</span>
                     </div>
                 </div>
-                <p class="card__description">The last game for nethan drake collection</p>
+                <p class="card__description">Stronghold: Warlords is a real-time strategy game</p>
             </div>
         </a>
     </li>
@@ -94,60 +129,8 @@
             </div>
         </a>
     </li>
-    <li>
-        <a href="" class="GameCard">
-            <img src="assets/pics/Horizon.jpg" class="card__image" alt=""/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Horizon Zero Dawn</h3>
-                        <span class="card__status">1 day ago</span>
-                    </div>
-                </div>
-                <p class="card__description">Earth is ours no more.</p>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="./HTML/Hellblade.html" class="GameCard">
-            <img src="assets/pics/SpiderMan2018.jpg" class="card__image" alt="hellblade"/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Spider Man Remastered</h3>
-                        <span class="card__status">5days ago</span>
-                    </div>
-                </div>
-                <p class="card__description">The friendly neighborhood spider-man</p>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="" class="GameCard">
-            <img src="assets/pics/MortalKombatXL.png" class="card__image" alt="MortalKombatXL"/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Mortal Kombat XL</h3>
-                        <span class="card__status">6 day ago</span>
-                    </div>
-                </div>
-                <p class="card__description">One of the best-selling titles of 2015.</p>
-            </div>
-        </a>
-    </li>
+
+
     <li>
         <a href="./HTML/Hellblade.html" class="GameCard">
             <img src="assets/pics/EldenRing.png" class="card__image" alt="EldenRing"/>
@@ -187,6 +170,13 @@
 </ul>
 
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
 <div class="footer-clean">
     <footer>
         <div class="container">
@@ -224,12 +214,6 @@
         </div>
     </footer>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-</body>
 </html>
 
 
