adjusted other sites

--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="parallax1">
+<div class="parallax1" style="background-image: url(../assets/pics/GodofWar/716160.jpg)">
     <span><a href="../index.html"></a></span>
 
     <div class="Parallax--title">
@@ -41,40 +41,33 @@
             his newfound role as a father and a mentor.
         </p>
     </div>
-
+    <h1 class="Section--title">Trailer Ahead ↓</h1>
+    <iframe width="1070" height="605" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
 </section>
 
-<div class="parallax2">
+<div class="parallax2" style="background-image: url(../assets/pics/GodofWar/GodOfWar3.jpg);">
     <div class="Parallax--title">
         We Do Not Hide We Prepare For A Fight...
     </div>
 
 </div>
 <section>
-    <h1 class="Section--title">A Spartan Never Lets His Back Hit The Ground.</h1>
-    <p class="Section--paragraph"> Many years have passed since Kratos, a Spartan warrior and former Greek God of War,
-        took his vengeance against the Greek Gods,
-        and he now lives with his young son Atreus in ancient Norway in the realm of Midgard. The game begins after the
-        death of the Jötunn warrior Faye,
-        Kratos' second wife and Atreus' mother, whose last request was for her ashes to be spread at the highest peak of
-        the Nine Realms. Kratos and Atreus prepare a funeral pyre for her,
-        mourn her death and soon go on a hunt as per Kratos' desire. However, much to Kratos' disappointment, Atreus
-        proves his incompetence and lack of focus, making Kratos reconsider taking Atreus in his journey.
-        Kratos is soon attacked by a mysterious stranger with godlike powers,
-        and who cannot feel anything physically. After seemingly killing him, Kratos reluctantly takes Atreus with him
-        and begins their journey.
-    </p>
-</section>
-<div class="parallax3">
-    <div class="Parallax--title">
-        Wars Are Won By Those Willing To Sacrifice Everything.
-    </div>
-    <div class="player">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player"
+    <h1 class="Section--title">Here lies our review ↓</h1>
+
+        <iframe width="1070" height="605" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+
+</section>
+<div class="parallax3" style="background-image: url(../assets/pics/GodofWar/GodOfWar4.jpg);">
+    <div class="Parallax--title">
+        Wars Are Won By Those Willing To Sacrifice Everything.
     </div>
+
 </div>
 <div>
     <section>
@@ -91,7 +84,7 @@
     </section>
 
 </div>
-<div class="parallax4">
+<div class="parallax4" style="background-image: url(../assets/pics/GodofWar/GodOfWar5.jpg);">
     <div class="Parallax--title">
         Don't Be Sorry, Be Better.
     </div>
