--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./css/Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ravens Blog</title>
+    <title>PLANET.GG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
 <ul class="cards">
     <li>
         <a href="./HTML/godOfWar.html" class="GameCard">
-            <img src="assets/pics/god-of-warCard.jpg" class="card__image" alt="God of war image"/>
+            <img src="assets/pics/GodofWar/god-of-warCard.jpg" class="card__image" alt="God of war image"/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
@@ -58,8 +58,8 @@
         </a>
     </li>
     <li>
-        <a href="./HTML/Hellblade.html" class="GameCard">
-            <img src="assets/pics/SpiderMan2018.jpg" class="card__image" alt="hellblade"/>
+        <a href="./HTML/Spiderman.html" class="GameCard">
+            <img src="assets/pics/SpiderMan/SpiderMan2018.jpg" class="card__image" alt="hellblade"/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
@@ -67,17 +67,17 @@
                     </svg>
                     <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
                     <div class="card__header-text">
-                        <h3 class="card__title">Spider Man Remastered</h3>
+                        <h3 class="card__title">Marvels Spiderman</h3>
                         <span class="card__status">5 days ago</span>
                     </div>
                 </div>
-                <p class="card__description">The friendly neighborhood spider-man</p>
+                <p class="card__description">Your friendly neighborhood Spiderman</p>
             </div>
         </a>
     </li>
     <li>
-        <a href="" class="GameCard">
-            <img src="assets/pics/ResidentEvil3.webp" class="card__image" alt=""/>
+        <a href="./HTML/residentevil3.html" class="GameCard">
+            <img src="assets/pics/ResidentEvil3/ResidentEvil3.webp" class="card__image" alt=""/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
@@ -94,8 +94,8 @@
         </a>
     </li>
     <li>
-        <a href="./HTML/Uncharted4.html" class="GameCard">
-            <img src="assets/pics/StrongholdWarlords.webp" class="card__image" alt="uncharted"/>
+        <a href="./HTML/stronghold.html" class="GameCard">
+            <img src="assets/pics/Stronghold/StrongholdWarlords.webp" class="card__image" alt="uncharted"/>
             <div class="card__overlay">
                 <div class="card__header">
                     <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
@@ -108,62 +108,6 @@
                     </div>
                 </div>
                 <p class="card__description">Stronghold: Warlords is a real-time strategy game</p>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="./HTML/Hellblade.html" class="GameCard">
-            <img src="assets/pics/hellbladeCard.jpg" class="card__image" alt="hellblade"/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/serag.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Hellblade senuas sacrifice</h3>
-                        <span class="card__status">1 hour ago</span>
-                    </div>
-                </div>
-                <p class="card__description">million voices in your head and lost in a land you ....</p>
-            </div>
-        </a>
-    </li>
-
-
-    <li>
-        <a href="./HTML/Hellblade.html" class="GameCard">
-            <img src="assets/pics/EldenRing.png" class="card__image" alt="EldenRing"/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/amr.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Elden Ring</h3>
-                        <span class="card__status">1 week ago</span>
-                    </div>
-                </div>
-                <p class="card__description">The Golden Order has been broken.</p>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="" class="GameCard">
-            <img src="assets/pics/ShadowMordor.png" class="card__image" alt=""/>
-            <div class="card__overlay">
-                <div class="card__header">
-                    <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                        <path/>
-                    </svg>
-                    <img class="card__thumb" src="assets/pics/nasser.png" alt=""/>
-                    <div class="card__header-text">
-                        <h3 class="card__title">Middle-earth: Shadow of Mordor</h3>
-                        <span class="card__status">1 day ago</span>
-                    </div>
-                </div>
-                <p class="card__description">Unleash the Power of the Wraith.</p>
             </div>
         </a>
     </li>
