all done except facebook and instagram

--- a/HTML/Spiderman.html
+++ b/HTML/Spiderman.html
@@ -22,14 +22,11 @@
 <section>
     <div>
         <p class="Section--paragraph">
-            Many years have passed since the titular God of War, Kratos took his vengeance against the Olympian gods.
-            Having survived his final encounter with his father Zeus,
-            Kratos has since travelled to Midgard in Ancient Norway and now lives with his young son Atreus in the world
-            of the Norse gods,
-            a savage land inhabited by many ferocious monsters and warriors.
-            In order to teach his son, whose mother (and Kratos's second wife) has recently died,
-            how to survive in such a world, Kratos must master the rage that has driven him for many years and embrace
-            his newfound role as a father and a mentor.
+            Marvel's Spider-Man is a 2018 action-adventure game developed by Insomniac Games and published by Sony Interactive Entertainment. 
+            Based on the Marvel Comics character Spider-Man, it tells an original narrative that is inspired by the long-running comic book mythology, 
+            while also drawing from various adaptations in other media. In the main story, the super-human crime lord Mister Negative orchestrates 
+            a plot to seize control of New York City's criminal underworld. When Mister Negative threatens to release a deadly virus, 
+            Spider-Man must confront him and protect the city while dealing with the personal problems of his civilian persona, Peter Parker.
         </p>
         <h1 class="Section--title">Trailer Ahead ↓</h1>        
         <iframe width="1070" height="605" src="https://www.youtube.com/embed/q4GdJVvdxss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -54,14 +51,12 @@
 </div>
 <div>
     <section>
-        <h1 class="Section--title">Keep your expectations low boy, and you'll never be disappointed.</h1>
-        <p class="Section--paragraph"> Atreus: The deuteragonist of the game. The son of Kratos and Faye, Atreus is a
-            young boy who accompanies Kratos on his journey.
-            He is taught how to hunt early in the game and is shown to be impulsive and undisciplined.
-            He has the ability to read runic writings and is more knowledgeable about the world and its inhabitants than
-            Kratos.
-            He is unaware of the god status of Kratos. He is eventually revealed to be also named Loki, the mythological
-            God of Mischief.
+        <h1 class="Section--title">Gameplay</h1>
+        <p class="Section--paragraph"> Gameplay is presented from the third-person perspective with a primary focus on Spider-Man's traversal 
+            and combat abilities. Spider-Man can freely move around New York City, interacting with characters, undertaking missions, 
+            and unlocking new gadgets and suits by progressing through the main story or completing tasks. 
+            Outside the story, the player is able to complete side missions to unlock additional content and collectible items. 
+            Combat focuses on chaining attacks together and using the environment and webs to incapacitate numerous foes while avoiding damage.
         </p>
         </p>
     </section>
