--- a/HTML/stronghold.html
+++ b/HTML/stronghold.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<div class="parallax1" style="background-image: url(../assets/pics/ResidentEvil3/RE3.jpg);">
+<div class="parallax1" style="background-image: url(../assets/pics/Stronghold/Stronghold-Warlords-9-1800x1013.jpg);">
     <span><a href="../index.html"></a></span>
 
     <div class="Parallax--title">
@@ -32,12 +32,12 @@
             his newfound role as a father and a mentor.
         </p>
         <h1 class="Section--title">Trailer Ahead ↓</h1>        
-        <iframe width="1070" height="605" src="https://www.youtube.com/embed/LxDm9T1TKvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="1070" height="605" src="https://www.youtube.com/embed/KjLOm-zxwKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 </section>
 
-<div class="parallax2" style="background-image: url(../assets/pics/ResidentEvil3/nemisi2.jpg);">
+<div class="parallax2" style="background-image: url(../assets/pics/Stronghold/4k-1Stronghold-Warlords-12-1800x1013.jpg);">
     <div class="Parallax--title">
         You do what you think is best
     </div>
@@ -70,7 +70,7 @@
 <div class="parallax4" style="background-image: url(../assets/pics/Stronghold/Stronghold-Warlords-3.png);">
     <div class="wrap">
 
-        <button class="buttonl" onclick="location.href='https://www.residentevil.com/3/us/'">LEARN
+        <button class="buttonl" onclick="location.href='https://www.strongholdwarlords.com/'">LEARN
             MORE
         </button>
     </div>
