--- a/HTML/godOfWar.html
+++ b/HTML/godOfWar.html
@@ -57,7 +57,7 @@
 <section>
     <h1 class="Section--title">Here lies our review ↓</h1>
 
-        <iframe width="1070" height="605" src="https://www.youtube.com/embed/Uev7TBs1Y0A" title="YouTube video player"
+        <iframe width="1070" height="605" src="https://www.youtube.com/embed/NnXYXwycdpk" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
