--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link " href="./HTML/aboutUs.html">ABOUT US</a>
             </li>
-
-
         </ul>
 
 
@@ -149,10 +144,11 @@
                         <li><a href="#">Benefits</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                        class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
-                        href="#"><i class="icon ion-social-instagram"></i></a>
-                    <p class="copyright">Company Name © 2018</p>
+                <div class="col-lg-3 item social">
+                    <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    <a href="https://twitter.com/Planet_GG4"><i class="icon ion-social-twitter"></i></a>
+                    <a href="#"><i class="icon ion-social-instagram"></i></a>
+                    <p class="copyright">Planet.GG © 2022</p>
                 </div>
             </div>
         </div>
